--- a/CuidooApp/Mom/Storyboards/Profile.storyboard
+++ b/CuidooApp/Mom/Storyboards/Profile.storyboard
@@ -6,7 +6,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Nome-->
+        <!--Sandra Castelo Branco-->
         <scene sceneID="xo8-8s-doP">
             <objects>
                 <tableViewController id="JiP-1q-4rA" customClass="ProfileViewController" customModule="CuidooApp" customModuleProvider="target" sceneMemberID="viewController">
@@ -51,47 +51,50 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="tableCellProfile" id="nBL-4O-rKg">
-                                        <rect key="frame" x="0.0" y="263" width="414" height="44.5"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tableCellProfile" rowHeight="150" id="nBL-4O-rKg">
+                                        <rect key="frame" x="0.0" y="263" width="414" height="150"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="nBL-4O-rKg" id="6MC-sT-Tga">
-                                            <rect key="frame" x="0.0" y="0.0" width="383" height="44.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="150"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="person" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="rc0-hu-1eI">
-                                                    <rect key="frame" x="17.5" y="9.5" width="27" height="27.5"/>
-                                                    <color key="tintColor" red="1" green="0.34509803919999998" blue="0.34509803919999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="27" id="Gka-4u-71w"/>
-                                                        <constraint firstAttribute="height" constant="30" id="Z9W-e6-07x"/>
-                                                    </constraints>
-                                                </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Perfil" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="36Q-yi-rB7">
-                                                    <rect key="frame" x="59.5" y="12" width="290" height="20"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="290" id="HXO-3g-dMU"/>
-                                                        <constraint firstAttribute="height" constant="20" id="aE2-0g-9Y0"/>
-                                                    </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SOBRE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="36Q-yi-rB7">
+                                                    <rect key="frame" x="180" y="3" width="54" height="20"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f8M-42-1VG">
+                                                    <rect key="frame" x="39" y="27" width="336" height="96"/>
+                                                    <string key="text">Formada em engenharia, trabalho com manutenção e serviços gerais. Sou mãe da Duda e da Pietra e uso o Cuidoo para conciliar trabalho e filhas.</string>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Y8W-71-X4t">
+                                                    <rect key="frame" x="0.0" y="149" width="414" height="1"/>
+                                                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="1" id="dET-IE-jY7"/>
+                                                    </constraints>
+                                                </view>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="36Q-yi-rB7" secondAttribute="bottom" constant="12" id="1Ry-qz-sql"/>
-                                                <constraint firstAttribute="bottom" secondItem="rc0-hu-1eI" secondAttribute="bottom" constant="6" id="TUD-ou-5eF"/>
-                                                <constraint firstItem="rc0-hu-1eI" firstAttribute="top" secondItem="6MC-sT-Tga" secondAttribute="top" constant="8" id="YG1-Z8-6Zv"/>
-                                                <constraint firstItem="rc0-hu-1eI" firstAttribute="leading" secondItem="6MC-sT-Tga" secondAttribute="leading" constant="17.5" id="d3k-lV-Tgg"/>
-                                                <constraint firstItem="36Q-yi-rB7" firstAttribute="top" secondItem="6MC-sT-Tga" secondAttribute="top" constant="12" id="r5t-9d-ZJz"/>
-                                                <constraint firstItem="36Q-yi-rB7" firstAttribute="leading" secondItem="rc0-hu-1eI" secondAttribute="trailing" constant="15" id="vnH-rb-79y"/>
+                                                <constraint firstAttribute="trailing" secondItem="Y8W-71-X4t" secondAttribute="trailing" id="AYo-uW-QI4"/>
+                                                <constraint firstItem="Y8W-71-X4t" firstAttribute="leading" secondItem="6MC-sT-Tga" secondAttribute="leading" id="C4Q-Mv-Wwx"/>
+                                                <constraint firstItem="f8M-42-1VG" firstAttribute="top" secondItem="6MC-sT-Tga" secondAttribute="topMargin" constant="16" id="EKO-Sy-Iop"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="f8M-42-1VG" secondAttribute="trailing" constant="19" id="bLV-zO-YRe"/>
+                                                <constraint firstItem="36Q-yi-rB7" firstAttribute="leading" secondItem="6MC-sT-Tga" secondAttribute="leadingMargin" constant="160" id="c30-Hl-yzH"/>
+                                                <constraint firstItem="f8M-42-1VG" firstAttribute="leading" secondItem="6MC-sT-Tga" secondAttribute="leadingMargin" constant="19" id="kbL-Jo-qJw"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="36Q-yi-rB7" secondAttribute="trailing" constant="160" id="mr3-Fj-WmA"/>
+                                                <constraint firstAttribute="bottom" secondItem="Y8W-71-X4t" secondAttribute="bottom" id="sbv-mR-Bft"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="f8M-42-1VG" secondAttribute="bottom" constant="16" id="uJ5-Wl-VBj"/>
+                                                <constraint firstItem="36Q-yi-rB7" firstAttribute="top" secondItem="6MC-sT-Tga" secondAttribute="topMargin" constant="-8" id="zpP-8U-tFh"/>
                                             </constraints>
                                         </tableViewCellContentView>
-                                        <connections>
-                                            <segue destination="bDc-zu-Lqt" kind="show" id="Rhk-9E-0Io"/>
-                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="tableCellHistory" id="Qr7-5r-HXg">
-                                        <rect key="frame" x="0.0" y="307.5" width="414" height="44.5"/>
+                                        <rect key="frame" x="0.0" y="413" width="414" height="44.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Qr7-5r-HXg" id="ho7-Ge-Qy6">
                                             <rect key="frame" x="0.0" y="0.0" width="383" height="44.5"/>
@@ -130,7 +133,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="tableCellHelp" id="Ju8-Cf-7ko">
-                                        <rect key="frame" x="0.0" y="352" width="414" height="44.5"/>
+                                        <rect key="frame" x="0.0" y="457.5" width="414" height="44.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Ju8-Cf-7ko" id="SMe-7x-f2m">
                                             <rect key="frame" x="0.0" y="0.0" width="383" height="44.5"/>
@@ -169,7 +172,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="tableCellConfig" id="Os2-jc-DaU">
-                                        <rect key="frame" x="0.0" y="396.5" width="414" height="44.5"/>
+                                        <rect key="frame" x="0.0" y="502" width="414" height="44.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Os2-jc-DaU" id="nd2-Lh-gvf">
                                             <rect key="frame" x="0.0" y="0.0" width="383" height="44.5"/>
@@ -215,9 +218,7 @@
                             <outlet property="delegate" destination="JiP-1q-4rA" id="Vwm-sc-0iu"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Nome" id="CaU-hK-MLo">
-                        <barButtonItem key="backBarButtonItem" title="voltar" id="DUj-Z8-7zn"/>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="Sandra Castelo Branco" id="zE3-kW-Iwl"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="nameLabel" destination="ACm-t6-ugi" id="NsY-hK-wAJ"/>
@@ -248,16 +249,6 @@
             </objects>
             <point key="canvasLocation" x="2172.463768115942" y="24.776785714285712"/>
         </scene>
-        <!--Bio-->
-        <scene sceneID="6Ug-KM-2Xl">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Bio" id="bDc-zu-Lqt" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="cL7-bx-mE0"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="6c0-Kh-bj8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2171.0144927536235" y="-47.544642857142854"/>
-        </scene>
         <!--Config-->
         <scene sceneID="XXm-Ga-WMl">
             <objects>
@@ -273,7 +264,6 @@
         <image name="doc.text.magnifyingglass" catalog="system" width="58" height="64"/>
         <image name="gear" catalog="system" width="64" height="58"/>
         <image name="mom" width="842" height="782"/>
-        <image name="person" catalog="system" width="64" height="58"/>
         <image name="questionmark.circle" catalog="system" width="64" height="60"/>
     </resources>
 </document>
