--- a/CuidooApp/Babysitter/Scenes/ConfirmMatch/babySitterConfirmMatchView.xib
+++ b/CuidooApp/Babysitter/Scenes/ConfirmMatch/babySitterConfirmMatchView.xib
@@ -7,9 +7,9 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="babySitterProfileViewController" customModule="CuidooApp" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="babbySitterConfirmMatchView" customModule="CuidooApp" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="v49-va-IRt" customClass="babbySitterConfirmMatchView" customModule="CuidooApp" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="v49-va-IRt">
             <rect key="frame" x="0.0" y="0.0" width="380" height="606"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
