--- a/CuidooApp/Babysitter/Storyboards/babySitterConfirmMatch.storyboard
+++ b/CuidooApp/Babysitter/Storyboards/babySitterConfirmMatch.storyboard
@@ -7,7 +7,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Em andamento-->
+        <!--Confirmar chamado-->
         <scene sceneID="HVW-vi-1dY">
             <objects>
                 <viewController id="P9h-Am-v7v" customClass="confirmMatchViewController" customModule="CuidooApp" customModuleProvider="target" sceneMemberID="viewController">
@@ -21,7 +21,7 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="66" id="1e7-bu-zWl"/>
                                 </constraints>
-                                <state key="normal" title="Reportar"/>
+                                <state key="normal" title="Recusar"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jis-Vn-KbT">
                                 <rect key="frame" x="215" y="780" width="183" height="66"/>
@@ -29,7 +29,7 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="66" id="M8m-Pm-XMo"/>
                                 </constraints>
-                                <state key="normal" title="Finalizar"/>
+                                <state key="normal" title="Aceitar"/>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xsN-qj-dos" customClass="babbySitterConfirmMatchView" customModule="CuidooApp" customModuleProvider="target">
                                 <rect key="frame" x="8" y="96" width="398" height="668"/>
@@ -51,7 +51,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="yGO-jV-APE"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Em andamento" id="LpF-N9-Ruf">
+                    <navigationItem key="navigationItem" title="Confirmar chamado" id="LpF-N9-Ruf">
                         <barButtonItem key="rightBarButtonItem" image="text.bubble" catalog="system" id="P8f-dp-Vv5">
                             <color key="tintColor" red="0.99824029209999998" green="0.39281293750000001" blue="0.39213877920000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         </barButtonItem>
