--- a/CuidooApp/Cells/Add Details/AddDetailsCell.xib
+++ b/CuidooApp/Cells/Add Details/AddDetailsCell.xib
@@ -9,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="addDetails" rowHeight="215" id="KGk-i7-Jjw" customClass="AddDetailsCell" customModule="CuidooApp" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="addDetailsCell" rowHeight="215" id="KGk-i7-Jjw" customClass="AddDetailsCell" customModule="CuidooApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="215"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -43,6 +43,9 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="addDetailsTextField" destination="fzd-tJ-hNM" id="59l-IV-AEd"/>
+            </connections>
             <point key="canvasLocation" x="140.57971014492756" y="210.60267857142856"/>
         </tableViewCell>
     </objects>
