Iniciando conexão de telas do app da baba

--- a/CuidooApp/Babysitter/Storyboards/ProfileBabysitter.storyboard
+++ b/CuidooApp/Babysitter/Storyboards/ProfileBabysitter.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Q9o-OT-GA1">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
@@ -7,6 +7,22 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="bni-vB-1Q3">
+            <objects>
+                <navigationController id="Q9o-OT-GA1" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="RCa-P5-RCk">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="pf3-PV-SEo" kind="relationship" relationship="rootViewController" id="R5J-39-uv0"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0rI-qD-Ele" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-704" y="212"/>
+        </scene>
         <!--Baby Sitter Profile View Controller-->
         <scene sceneID="EkA-4f-GZA">
             <objects>
@@ -16,7 +32,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="zYg-OO-ABW">
-                                <rect key="frame" x="0.0" y="44" width="414" height="738"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="694"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="229" id="O4h-NL-alh">
@@ -230,6 +246,7 @@
                                 </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="startJobButtonAction:" destination="pf3-PV-SEo" eventType="touchUpInside" id="ylG-3N-KmT"/>
+                                    <segue destination="3ue-q7-x5X" kind="show" id="RxE-Cc-trI"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -249,6 +266,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="yrg-hj-tOR"/>
                     </view>
+                    <navigationItem key="navigationItem" id="Cvj-4P-ggO"/>
                     <connections>
                         <outlet property="startJobButtonOutlet" destination="t2H-eo-nj5" id="2TX-ox-hg2"/>
                     </connections>
@@ -257,13 +275,15 @@
             </objects>
             <point key="canvasLocation" x="31.884057971014496" y="211.60714285714286"/>
         </scene>
-        <!--Storyboard Reference-->
+        <!--babySitterConfirmMatch-->
         <scene sceneID="jEF-Z5-PH2">
             <objects>
-                <viewControllerPlaceholder id="3ue-q7-x5X" sceneMemberID="viewController"/>
+                <viewControllerPlaceholder storyboardName="babySitterConfirmMatch" id="3ue-q7-x5X" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="7hM-On-9ew"/>
+                </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cpv-ay-uhu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="757" y="157"/>
+            <point key="canvasLocation" x="562" y="446"/>
         </scene>
         <!--Support-->
         <scene sceneID="XAI-hb-b0u">
