--- a/CuidooApp/Babysitter/Scenes/ConfirmMatch/babySitterConfirmMatchView.xib
+++ b/CuidooApp/Babysitter/Scenes/ConfirmMatch/babySitterConfirmMatchView.xib
@@ -7,7 +7,11 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="babbySitterConfirmMatchView" customModule="CuidooApp" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="babySitterConfirmMatchView" customModule="CuidooApp" customModuleProvider="target">
+            <connections>
+                <outlet property="babySitterImageView" destination="D5F-Hl-3f6" id="OC5-tn-pat"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="v49-va-IRt">
             <rect key="frame" x="0.0" y="0.0" width="380" height="606"/>
@@ -229,9 +233,6 @@
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="gLj-oI-ToS"/>
-            <connections>
-                <outlet property="babySitterImageView" destination="D5F-Hl-3f6" id="DGk-t1-bcY"/>
-            </connections>
             <point key="canvasLocation" x="110.14492753623189" y="25.446428571428569"/>
         </view>
     </objects>
