--- a/CuidooApp/Babysitter/Storyboards/babySitterConfirmMatch.storyboard
+++ b/CuidooApp/Babysitter/Storyboards/babySitterConfirmMatch.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Now-mF-usl">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="P9h-Am-v7v">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
@@ -32,7 +32,7 @@
                                 <state key="normal" title="Aceitar"/>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xsN-qj-dos" customClass="babySitterConfirmMatchView" customModule="CuidooApp" customModuleProvider="target">
-                                <rect key="frame" x="8" y="96" width="398" height="668"/>
+                                <rect key="frame" x="8" y="52" width="398" height="712"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             </view>
                         </subviews>
@@ -63,24 +63,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Oql-qt-7T9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1084.0579710144928" y="169.41964285714286"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="M27-y2-YPk">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Now-mF-usl" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ALD-93-2qn">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="P9h-Am-v7v" kind="relationship" relationship="rootViewController" id="1ER-eI-P3b"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="lUb-mq-2tz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="173.91304347826087" y="169.41964285714286"/>
         </scene>
     </scenes>
     <resources>
