Fluxo "Sim" do app da mãe finalizado e adicionado alertas
Alteracoes nas segues e controllers.

--- a/CuidooApp/Mom/Storyboards/Request.storyboard
+++ b/CuidooApp/Mom/Storyboards/Request.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="VdH-3P-VeZ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ymi-OD-QlD">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
@@ -38,10 +38,10 @@
                                 </connections>
                             </button>
                             <scrollView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R8N-PZ-850">
-                                <rect key="frame" x="16" y="104" width="382" height="644"/>
+                                <rect key="frame" x="16" y="60" width="382" height="688"/>
                                 <subviews>
                                     <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KYG-Th-P9N" customClass="BabySitterInfosView" customModule="CuidooApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="382" height="644"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="382" height="688"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="382" id="d8E-GV-pOf"/>
@@ -81,31 +81,22 @@
                         <outlet property="babySitterView" destination="KYG-Th-P9N" id="Hgm-bc-0ge"/>
                         <outlet property="confirm" destination="GbP-8m-rRx" id="nRQ-0p-1tk"/>
                         <outlet property="seeNext" destination="WHe-9f-Q24" id="Qbh-dc-U85"/>
-                        <segue destination="eON-LE-znQ" kind="unwind" identifier="requestingSegue" unwindAction="goToRequestingUnwind:" id="8Yl-Su-C1V"/>
+                        <segue destination="NCy-AW-38K" kind="presentation" identifier="requestingSegue" modalPresentationStyle="fullScreen" id="RrB-mU-LC8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ip3-3G-Ydx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <exit id="eON-LE-znQ" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1957.9710144927537" y="150.66964285714286"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="kIi-WT-LNZ">
+        <!--Requesting-->
+        <scene sceneID="tFU-0y-SwR">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="VdH-3P-VeZ" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Hrb-dJ-QQe">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="ymi-OD-QlD" kind="relationship" relationship="rootViewController" id="pEv-8N-XWA"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="QnV-hE-o18" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <viewControllerPlaceholder storyboardName="Requesting" id="NCy-AW-38K" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="5ly-kb-Iiy"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HWm-Yf-DFY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1047.8260869565217" y="150.66964285714286"/>
+            <point key="canvasLocation" x="2227" y="563"/>
         </scene>
     </scenes>
 </document>
