--- a/CuidooApp/Babysitter/Storyboards/BabySitterProfile.storyboard
+++ b/CuidooApp/Babysitter/Storyboards/BabySitterProfile.storyboard
@@ -176,7 +176,7 @@
                                 </state>
                                 <connections>
                                     <action selector="startJobButtonAction:" destination="pf3-PV-SEo" eventType="touchUpInside" id="ylG-3N-KmT"/>
-                                    <segue destination="wf3-a0-YHo" kind="show" id="Udb-Gs-BRk"/>
+                                    <segue destination="wf3-a0-YHo" kind="presentation" modalPresentationStyle="fullScreen" id="Udb-Gs-BRk"/>
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BhD-7b-G2Z">
@@ -260,7 +260,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iMc-vi-Tiz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1214" y="422"/>
+            <point key="canvasLocation" x="1241" y="161"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="i5Z-p4-zTB">
@@ -278,7 +278,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QVq-lx-IfK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-320.28985507246381" y="161.38392857142856"/>
+            <point key="canvasLocation" x="-171" y="161"/>
         </scene>
     </scenes>
     <resources>
