--- a/CuidooApp/Babysitter/Storyboards/babySitterConfirmMatch.storyboard
+++ b/CuidooApp/Babysitter/Storyboards/babySitterConfirmMatch.storyboard
@@ -30,6 +30,9 @@
                                     <constraint firstAttribute="height" constant="66" id="M8m-Pm-XMo"/>
                                 </constraints>
                                 <state key="normal" title="Aceitar"/>
+                                <connections>
+                                    <action selector="acceptButton:" destination="P9h-Am-v7v" eventType="touchUpInside" id="d32-74-3BS"/>
+                                </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xsN-qj-dos" customClass="babySitterConfirmMatchView" customModule="CuidooApp" customModuleProvider="target">
                                 <rect key="frame" x="8" y="52" width="398" height="712"/>
@@ -57,6 +60,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="acceptButton" destination="Jis-Vn-KbT" id="CCK-VR-f2h"/>
                         <outlet property="babySitterConfirmMatchView" destination="xsN-qj-dos" id="LdB-Kl-A6t"/>
                     </connections>
                 </viewController>
