--- a/CuidooApp/Mom/Scenes/Support/FaqTableViewCell.xib
+++ b/CuidooApp/Mom/Scenes/Support/FaqTableViewCell.xib
@@ -25,11 +25,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ellipsis.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="bgl-q0-nqV">
-                                <rect key="frame" x="466" y="18.5" width="20" height="19"/>
-                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RUB-8u-bNx">
-                                <rect key="frame" x="16" y="48" width="465" height="102"/>
+                                <rect key="frame" x="16" y="41.5" width="465" height="108.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -37,14 +34,12 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="bgl-q0-nqV" firstAttribute="top" secondItem="RkH-zp-LB7" secondAttribute="top" constant="18" id="Enz-yf-CJP"/>
                             <constraint firstAttribute="bottom" secondItem="RUB-8u-bNx" secondAttribute="bottom" constant="18" id="GAX-4a-UYo"/>
-                            <constraint firstItem="RUB-8u-bNx" firstAttribute="top" secondItem="bgl-q0-nqV" secondAttribute="bottom" constant="10" id="K11-d3-v5I"/>
                             <constraint firstItem="SFF-fZ-kJ9" firstAttribute="leading" secondItem="RkH-zp-LB7" secondAttribute="leading" constant="16" id="SWV-PO-O7p"/>
-                            <constraint firstAttribute="trailing" secondItem="bgl-q0-nqV" secondAttribute="trailing" constant="15" id="TYj-VA-qD6"/>
                             <constraint firstAttribute="trailing" secondItem="RUB-8u-bNx" secondAttribute="trailing" constant="20" id="fsb-G3-aPk"/>
                             <constraint firstItem="RUB-8u-bNx" firstAttribute="leading" secondItem="RkH-zp-LB7" secondAttribute="leading" constant="16" id="g5a-ZY-Eh5"/>
                             <constraint firstItem="SFF-fZ-kJ9" firstAttribute="top" secondItem="RkH-zp-LB7" secondAttribute="top" constant="16" id="mLC-bx-cas"/>
+                            <constraint firstItem="RUB-8u-bNx" firstAttribute="top" secondItem="SFF-fZ-kJ9" secondAttribute="bottom" constant="5" id="v5E-nz-fQs"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -64,7 +59,4 @@
             <point key="canvasLocation" x="281.8840579710145" y="201.5625"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="ellipsis.circle" catalog="system" width="64" height="60"/>
-    </resources>
 </document>
